[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cprint_Steyaertc23"
version = "0.0.1"
authors = [
  { name="Steyaertc23", email="savagery2005@gmail.com" },
]
description = "A simple way to print in colors"
readme = "README.md"
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Steyaertc23/cprint"
"Bug Tracker" = "https://github.com/Steyaertc23/cprint/issues"